# rnnoise

./: .gitignore  CMakeLists.txt  README  download_model.sh
doc/: winml_handoff_2026-06-16.md
examples/: rnnoise_demo.c
scripts/: export_rnn_onnx.py  measure_rnnoise_cpu.ps1
src/: denoise.c  denoise.h  rnn_onnx.c  rnn_onnx.cpp  rnn_onnx.h  rnn_ort_common.cpp  rnn_ort_common.h  rnn_winml.cpp  rnn_winml.h
tools/: rnnoise_compare_random.c  rnnoise_winml_ep_tool.cpp
